--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
 </head>
 
 <body class="text-center">
-  <div class="container p-5">
-  
-    <div class="ContainerSignUp">
-      <div class="ContainerHeaderBG"></div>
-      <div class="signupContainer col-6">
+      <div class="background"></div>
+      <div class="signUpContainer col-6">
         <div class="box col-12">
           <h1 class="col">Login</h1>
           <input type="text"  class="col" placeholder="Usuario"/>
           <input type="email" class="col" placeholder="Email"/>
           <input type="password" class="col" placeholder="Contraseña"/>
-          <button class="col">Login</button>
+          <button class="col"><a href="cover.html">Login</a></button>
         </div>
-      </div>
     </div>
-  </div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
