Validations  are made

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="signUpContainer col-6">
         <div class="box col-12">
           <h1 class="col">Login</h1>
-          <input type="text"  class="col" placeholder="Usuario"/>
-          <input type="email" class="col" placeholder="Email"/>
-          <input type="password" class="col" placeholder="Contraseña"/>
-          <button class="col"><a href="cover.html">Login</a></button>
+          <input type="text" class="col" placeholder="Usuario" id="username"required/>
+          <input type="email" class="col" placeholder="Email" id="email"required/>
+          <input type="password" class="col" placeholder="Contraseña" id="password"required/>
+          <button class="col" id="button"><a href="cover.html">Login</a></button>
         </div>
     </div>
 
