Username displayed when logged in

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <input type="text" class="col" placeholder="Usuario" id="username"required/>
           <input type="email" class="col" placeholder="Email" id="email"required/>
           <input type="password" class="col" placeholder="Contraseña" id="password"required/>
-          <button class="col" id="button"><a href="cover.html">Login</a></button>
+          <button class="col" id="button">Login</button>
         </div>
     </div>
 
