--- a/products.html
+++ b/products.html
@@ -29,20 +29,20 @@
     </nav>
     <div class="text-center p-4">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todas los productos del sitio.</p>
+      <p class="lead">Verás aquí todos los productos del sitio.</p>
   </div>
     <div class="container">
       <div class="row">
           <div class="col text-right">
               <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                   <label class="btn btn-light active" id="sortAsc" >
-                      <input type="radio" name="options" autocomplete="off" checked>A-Z
+                      <input type="radio" name="options" autocomplete="off" checked>Menor precio
                   </label>
                   <label class="btn btn-light" id="sortDesc" >
-                      <input type="radio" name="options" autocomplete="off">Z-A
+                      <input type="radio" name="options" autocomplete="off">Mayor precio
                   </label>
                   <label class="btn btn-light" id="sortByCount" >
-                      <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
+                      <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
                   </label>
               </div>
           </div>
