--- a/products.html
+++ b/products.html
@@ -12,6 +12,8 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/products.css">
+    <link rel="icon" href="img/circle.png">
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -35,6 +37,7 @@
       <div class="row">
           <div class="col text-right">
               <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+                <p id="order">Ordenar</p>
                   <label class="btn btn-light active" id="sortAsc" >
                       <input type="radio" name="options" autocomplete="off" checked>Menor precio
                   </label>
@@ -52,7 +55,7 @@
           <div class="col-md-6 col-sm-12 mb-1 container">
             <div class="row container p-0 m-0">
               <div class="col">
-                <p class="font-weight-normal text-right my-2">Precio:</p>
+                <p id="price" class="font-weight-normal text-right my-2">Precio:</p>
               </div>
               <div class="col">
                 <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
@@ -80,7 +83,14 @@
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
     </footer>
-    <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  </div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
